Fix search on small devices

--- a/web-ui/src/main/resources/catalog/views/sextant/api.css
+++ b/web-ui/src/main/resources/catalog/views/sextant/api.css
@@ -13116,11 +13116,22 @@ yx-axis
   width: 100%;
 }
 @media (max-width: 991px) {
+  .gn .gn-resultview {
+    clear: both;
+  }
+  .gn #sxt-tabswitcher,
+  .gn .sxt-searchform-content {
+    display: none;
+  }
   .gn .row .sxt-left-panel {
     float: none;
     width: 100%;
   }
+  .gn .row .sxt-left-panel .sxt-reset-btn {
+    bottom: -2.6em;
+  }
   .gn .row .sxt-center-panel {
+    margin-top: 3em;
     float: none;
     width: 100%;
   }
